tenth commit: resolved the issues with the rendering of the feature cards on smaller screens, change the navbar background color to a softer shade of green and change the hover color of the nav links on smaller screens to white

--- a/CSS/app.css
+++ b/CSS/app.css
@@ -184,7 +184,7 @@ hr.Faq-line {
 
 @media (max-width:576px) {
     #nav-sm-bg {
-        background-color: var(--primary-color);
+        background-color: var(--btn-hover);
         
     }
 
@@ -195,6 +195,12 @@ hr.Faq-line {
     #navitemRef .nav-link {
         color: white;
     }
+
+    #navitemRef .nav-link:hover {
+        color: #000000;
+        font-weight: 700;
+    }
+
     .footer {
         background-color: var(--btn-hover);
         color: var(--secondary-color);
